# shared-library-example

./: .gitignore  Makefile  Makefile.linux  Makefile.mac  README.md  package.json  test.js
dependent/: CMakeLists.txt  binding.cpp  binding.gyp  package.json
version-1/: CMakeLists.txt  binding.cpp  binding.gyp  libshare.c  libshare.h
version-2/: CMakeLists.txt  binding.cpp  binding.gyp  index.js  libshare.c  libshare.h
